# langchain-openai-rag

./: .coverage  .gitignore  README.md  coverage.xml  embeddings.py  mitm.py  requirements.txt  test-requirements.txt  tox.ini
chai/: embeddings.py  pyproject.toml
fixtures/: reviews.py
tests/: test_llm.py
