[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "chai"
authors = [
    {name = "Rafael Pierre", email = "hello@llmshowto.com"},
]
description = "Chai"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["llm", "langchain", "openai", "rag"]
license = {text = "MIT"}
classifiers = [
    "Framework :: Langchain",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "langchain"
]
dynamic = ["version"]

[project.optional-dependencies]
openai = ["openai"]
chroma = ["chroma-db"]
embeddings = ["tiktoken"]

[project.scripts]